--- a/package.json
+++ b/package.json
@@ -63,6 +63,16 @@
       "./node_modules/(?!(lodash-es|other-es-lib))"
     ]
   },
+  "dependencies": {
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/core": "^8.4.0",
+    "threads": "^1.7.0",
+    "tiny-worker": "^2.3.0"
+  },
+  "peerDependencies": {
+    "threads": "^1.7.0",
+    "tiny-worker": "^2.3.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
