feat: add dust & dust hybrid container ⭐

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   "dependencies": {
     "@nestjs/common": "^8.4.0",
     "@nestjs/core": "^8.4.0",
+    "@vodyani/core": "^0.1.1",
+    "lodash": "^4.17.21",
     "threads": "^1.7.0",
     "tiny-worker": "^2.3.0"
   },
@@ -82,6 +84,7 @@
     "@types/lodash": "4.14.180",
     "@types/node": "16.11.26",
     "@types/supertest": "2.0.11",
+    "@vodyani/eslint-config": "^1.0.5",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "supertest": "6.2.2",
