--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "version": "0.0.6",
   "author": "ChoGathK",
-  "description": "🌟 dust is vodyani's threading solution, which makes basic thread and thread pool functions available to the public. When work threads is invoked, it takes over threads and isolates them from the main thread.",
+  "description": "🌟 dust is the threading solution of vodyani, which makes basic thread and thread pool functions available to the public. When work threads is invoked, it takes over threads and isolates them from the main thread.",
   "homepage": "https://github.com/vodyani/dust#readme",
   "repository": {
     "type": "git",
