--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
   "dependencies": {
     "@nestjs/common": "^8.4.4",
     "@nestjs/core": "^8.4.4",
-    "@vodyani/core": "^0.3.4",
+    "@vodyani/core": "^0.3.6",
+    "@vodyani/validator": "^0.0.1",
     "lodash": "^4.17.21",
     "threads": "^1.7.0",
     "tiny-worker": "^2.3.0"
