--- a/package.json
+++ b/package.json
@@ -65,17 +65,15 @@
     ]
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.4",
-    "@nestjs/core": "^8.4.4",
-    "@vodyani/core": "^0.3.6",
-    "@vodyani/validator": "^0.0.1",
-    "lodash": "^4.17.21",
-    "threads": "^1.7.0",
-    "tiny-worker": "^2.3.0"
+    "@nestjs/common": "8.4.4",
+    "@vodyani/core": "0.3.7",
+    "lodash": "4.17.21",
+    "threads": "1.7.0",
+    "tiny-worker": "2.3.0"
   },
   "peerDependencies": {
-    "threads": "^1.7.0",
-    "tiny-worker": "^2.3.0"
+    "threads": "1.7.0",
+    "tiny-worker": "2.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "16.2.3",
@@ -86,7 +84,7 @@
     "@types/lodash": "4.14.181",
     "@types/node": "16.11.26",
     "@types/supertest": "2.0.12",
-    "@vodyani/eslint-config": "^1.0.9",
+    "@vodyani/eslint-config": "1.0.9",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "supertest": "6.2.2",
